--- a/stable/lamp/templates/secret.yaml
+++ b/stable/lamp/templates/secret.yaml
@@ -7,14 +7,14 @@ metadata:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
     release: "{{ .Release.Name }}"
     heritage: "{{ .Release.Service }}"
-  {{- if .Values.keep_secrets }}
+  {{- if .Values.keepSecrets }}
   annotations:
     helm.sh/resource-policy: keep
   {{- end }}
 type: Opaque
 data:
-  {{- if .Values.mysql.root_password }}
-  mysql-root-password: {{ .Values.mysql.root_password | b64enc | quote }}
+  {{- if .Values.mysql.rootPassword }}
+  mysql-root-password: {{ .Values.mysql.rootPassword | b64enc | quote }}
   {{- if and .Values.mysql.user .Values.mysql.password }}
   mysql-user: {{ .Values.mysql.user | b64enc | quote }}
   mysql-password: {{ .Values.mysql.password | b64enc | quote }}
@@ -23,11 +23,11 @@ data:
   {{- end }}
   {{- end }}
   {{- end }}
-  {{- if .Values.wordpress.gdrive_rtoken }}
-  gdrive-rtoken: {{ .Values.wordpress.gdrive_rtoken | b64enc | quote }}
+  {{- if .Values.wordpress.gdriveRToken }}
+  gdrive-rtoken: {{ .Values.wordpress.gdriveRToken | b64enc | quote }}
   {{- end }}
-  {{- if .Values.ingress.htpasswd_string }}
-  auth: {{ .Values.ingress.htpasswd_string | b64enc | quote }}
+  {{- if .Values.ingress.htpasswdString }}
+  auth: {{ .Values.ingress.htpasswdString | b64enc | quote }}
   {{- end }}
   {{- if .Values.sftp.enabled }}
   sftp-user: {{ required "Please specify the SFTP user name at .Values.sftp.user" .Values.sftp.user | b64enc | quote }}
