--- a/stable/lamp/examples/drupal.yaml
+++ b/stable/lamp/examples/drupal.yaml
@@ -1,5 +1,5 @@
 mysql:
-  root_password: "Root Password here..."
+  rootPassword: "Root Password here..."
   user: drupal
   password: "User Password here..."
   database: drupal
@@ -7,11 +7,11 @@ mysql:
 php:
   repository: drupal
   tag: 7-fpm
-  persistent_subpaths:
+  persistentSubpaths:
   - modules
   - profiles
   - sites
   - themes
   # copies web root to persistent storage upon creation. remember to disable on subsequent
   # upgrades of the chart, otherwise your storage might get overwritten...
-  copy_root: true
+  copyRoot: true
