--- a/stable/lamp/examples/joomla.yaml
+++ b/stable/lamp/examples/joomla.yaml
@@ -1,5 +1,5 @@
 mysql:
-  root_password: "Root Password here..."
+  rootPassword: "Root Password here..."
   user: joomla
   password: "User Password here..."
   database: joomla
