--- a/stable/lamp/examples/nextcloud.yaml
+++ b/stable/lamp/examples/nextcloud.yaml
@@ -1,5 +1,5 @@
 mysql:
-  root_password: "Root Password here..."
+  rootPassword: "Root Password here..."
   user: nextcloud
   password: "User Password here..."
   database: nextcloud
@@ -7,7 +7,7 @@ mysql:
 php:
   repository: nextcloud
   tag: fpm
-  persistent_subpaths:
+  persistentSubpaths:
   - apps
   - config
   - data
