--- a/stable/lamp/examples/owncloud.yaml
+++ b/stable/lamp/examples/owncloud.yaml
@@ -1,5 +1,5 @@
 mysql:
-  root_password: "Root Password here..."
+  rootPassword: "Root Password here..."
   user: owncloud
   password: "User Password here..."
   database: owncloud
