--- a/stable/lamp/examples/wordpress-php-ini.yaml
+++ b/stable/lamp/examples/wordpress-php-ini.yaml
@@ -1,5 +1,5 @@
 mysql:
-  root_password: "Root Password here..."
+  rootPassword: "Root Password here..."
   user: wordpress
   password: "User Password here..."
   database: wordpress
