--- a/stable/lamp/templates/ingress.yaml
+++ b/stable/lamp/templates/ingress.yaml
@@ -2,19 +2,19 @@
 apiVersion: extensions/v1beta1
 kind: Ingress
 metadata:
-  name: {{ template "fullname" . }}-app
+  name: {{ template "lamp.fullname" . }}-app
   annotations:
     {{- if .Values.ingress.ssl }}
     kubernetes.io/tls-acme: "true"
     {{- end }}
     {{- if .Values.ingress.htpasswdString }}
     ingress.kubernetes.io/auth-type: basic
-    ingress.kubernetes.io/auth-secret: {{ template "fullname" . }}
+    ingress.kubernetes.io/auth-secret: {{ template "lamp.fullname" . }}
     ingress.kubernetes.io/auth-realm: "Authenticate"
     {{- end }}
     {{- if .Values.ingress.subdomainWWW }}
     ingress.kubernetes.io/configuration-snippet: |
-      rewrite ^(.*)$ $scheme://www.{{ template "domain" . }}$1;
+      rewrite ^(.*)$ $scheme://www.{{ template "lamp.domain" . }}$1;
     {{- end }}
     {{- range $annotation := .Values.ingress.annotations }}
     {{ $annotation }}
@@ -22,16 +22,16 @@ metadata:
 spec:
   {{- if .Values.ingress.ssl }}
   tls:
-  - secretName: {{ template "fullname" . }}-tls-app
+  - secretName: {{ template "lamp.fullname" . }}-tls-app
     hosts:
-    - {{ template "domain" . }}
+    - {{ template "lamp.domain" . }}
   {{- end }}
   rules:
-  - host: {{ template "domain" . }}
+  - host: {{ template "lamp.domain" . }}
     http:
       paths:
       - path: /
         backend:
-          serviceName: {{ template "fullname" . }}
+          serviceName: {{ template "lamp.fullname" . }}
           servicePort: {{ .Values.service.HTTPPort }}
 {{- end }}
