--- a/stable/lamp/templates/service-sftp.yaml
+++ b/stable/lamp/templates/service-sftp.yaml
@@ -2,7 +2,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{ template "fullname" . }}-sftp
+  name: {{ template "lamp.fullname" . }}-sftp
   labels:
     chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
 spec:
@@ -16,5 +16,5 @@ spec:
     protocol: TCP
     name: sftp
   selector:
-    app: {{ template "fullname" . }}
+    app: {{ template "lamp.fullname" . }}
 {{- end -}}
