--- a/stable/lamp/templates/secret.yaml
+++ b/stable/lamp/templates/secret.yaml
@@ -4,9 +4,9 @@ metadata:
   name: {{ template "lamp.fullname" . }}
   labels:
     app: {{ template "lamp.fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
   {{- if .Values.keepSecrets }}
   annotations:
     helm.sh/resource-policy: keep
