--- a/stable/lamp/templates/configmap-httpd.yaml
+++ b/stable/lamp/templates/configmap-httpd.yaml
@@ -2,9 +2,12 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-  name: {{template "lamp.fullname" .}}-httpd
+  name: {{ template "lamp.fullname" . }}-httpd
   labels:
-    app: {{template "lamp.fullname" .}}
+    app: {{ template "lamp.fullname" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
 data:
 {{ (.Files.Glob "files/httpd/httpd.conf").AsConfig | indent 2 }}
 {{ (.Files.Glob "files/httpd/httpd-vhosts.conf").AsConfig | indent 2 }}
