--- a/stable/lamp/templates/configmap-init.yaml
+++ b/stable/lamp/templates/configmap-init.yaml
@@ -4,7 +4,10 @@ kind: ConfigMap
 metadata:
   name: {{template "lamp.fullname" .}}-init
   labels:
-    app: {{template "lamp.fullname" .}}
+    app: {{ template "lamp.fullname" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
 data:
   {{- if .Values.init.clone.release }}
 {{ (.Files.Glob "files/init/init_clone.sh").AsConfig | indent 2 }}
