--- a/stable/lamp/templates/pvc.yaml
+++ b/stable/lamp/templates/pvc.yaml
@@ -5,9 +5,9 @@ metadata:
   name: {{ template "lamp.fullname" . }}
   labels:
     app: {{ template "lamp.fullname" . }}
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version }}"
-    release: "{{ .Release.Name }}"
-    heritage: "{{ .Release.Service }}"
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
   {{- if .Values.persistence.keep }}
     helm.sh/resource-policy: keep
   {{- end }}
