--- a/stable/lamp/templates/service.yaml
+++ b/stable/lamp/templates/service.yaml
@@ -3,7 +3,10 @@ kind: Service
 metadata:
   name: {{ template "lamp.fullname" . }}
   labels:
-    chart: "{{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}"
+    app: {{ template "lamp.fullname" . }}
+    chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
+    heritage: {{ .Release.Service }}
+    release: {{ .Release.Name }}
 spec:
   {{- if .Values.ingress.enabled }}
   type: ClusterIP
