--- a/stable/lamp/templates/ingress-services.yaml
+++ b/stable/lamp/templates/ingress-services.yaml
@@ -7,10 +7,7 @@ metadata:
     {{- if .Values.ingress.ssl }}
     kubernetes.io/tls-acme: "true"
     {{- end }}
-    {{- range $annotation := .Values.ingress.annotations }}
-    {{ $annotation }}
-    {{- end }}
-
+{{ toYaml .Values.ingress.annotations | indent 4 }}
 spec:
   {{- if .Values.ingress.ssl }}
   tls:
