[Sentry] Disable ingress by default (#2388)
* Disable Sentry ingress by default

* Bump chart version

* Fix linting issues

--- a/stable/sentry/values.yaml
+++ b/stable/sentry/values.yaml
@@ -39,7 +39,7 @@ worker:
       cpu: 100m
       memory: 100Mi
 
-# Initial admin user to create 
+# Initial admin user to create
 user:
   email: admin@sentry.local
 
@@ -88,7 +88,7 @@ persistence:
 ## ref: http://kubernetes.io/docs/user-guide/ingress/
 ##
 ingress:
-  enabled: true
+  enabled: false
   hostname: sentry.local
 
   ## Ingress annotations
@@ -113,7 +113,7 @@ postgresql:
   imageTag: "9.5"
   persistence:
     enabled: true
-      
+
 redis:
   persistence:
     enabled: true
