--- a/stable/lamp/templates/secret.yaml
+++ b/stable/lamp/templates/secret.yaml
@@ -3,7 +3,7 @@ kind: Secret
 metadata:
   name: {{ template "lamp.fullname" . }}
   labels:
-    app: {{ template "lamp.fullname" . }}
+    app: {{ template "lamp.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
