--- a/stable/lamp/templates/service-sftp.yaml
+++ b/stable/lamp/templates/service-sftp.yaml
@@ -4,7 +4,7 @@ kind: Service
 metadata:
   name: {{ template "lamp.fullname" . }}-sftp
   labels:
-    app: {{ template "lamp.fullname" . }}
+    app: {{ template "lamp.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
@@ -19,5 +19,6 @@ spec:
     protocol: TCP
     name: sftp
   selector:
-    app: {{ template "lamp.fullname" . }}
+    app: {{ template "lamp.name" . }}
+    release: {{ .Release.Name }}
 {{- end -}}
