--- a/stable/lamp/templates/service.yaml
+++ b/stable/lamp/templates/service.yaml
@@ -3,7 +3,7 @@ kind: Service
 metadata:
   name: {{ template "lamp.fullname" . }}
   labels:
-    app: {{ template "lamp.fullname" . }}
+    app: {{ template "lamp.name" . }}
     chart: {{ .Chart.Name }}-{{ .Chart.Version | replace "+" "_" }}
     heritage: {{ .Release.Service }}
     release: {{ .Release.Name }}
@@ -43,4 +43,5 @@ spec:
     name: phpmyadmin
   {{ end }}
   selector:
-    app: {{ template "lamp.fullname" . }}
+    app: {{ template "lamp.name" . }}
+    release: {{ .Release.Name }}
